# IllumiGator

./: .gitignore  README.md  pyproject.toml  test-map.json  test.tiled-session  tmw_desert_spacing.tsx
illumigator/: demo.py  entity.py  geometry.py  level.py  level_selector.py  levels.json  light.py  main.py  menus.py  object_animation.py  temp_main.py  util.py  worldobjects.py
illumigator/data/: config.json
illumigator/data/levels/: level_0.json
illumigator/data/levels/community/: custom_level.json  custom_level11.json  custom_level15.json  custom_level2.json  custom_level8.json  custom_level_test.json  levels.json  my_level.json  test.json
illumigator/data/levels/system/: level_0.json  level_1.json  level_2.json  level_3.json  level_4.json  level_5.json  levels.json
illumigator/views/: audio.py  community_level.py  community_win.py  controls.py  final_win.py  game.py  lose.py  main_menu.py  official_level.py  options.py  paused.py  win.py
illumiphysics/: Cargo.toml  pyproject.toml
illumiphysics/src/: geometry.rs  lib.rs  light.rs
src/illumigator/: illumigator.py  menus.py  worldobjects.py
src/illumigator/util/: util.py
src/scripts/: Demo.py  IllumiGator.py  Light.py  RayMarchingTest.py  Shapes.py  WorldObject.py  demo.py  geometry.py  illumigator.py  light.py  menus.py  worldobjects.py
src/scripts/util/: util.py
