[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "illumigator"
version = "0.0.5"
authors = [
  { name="Richard Sorkin", email="r.sorkin@ufl.edu" },
]
description = "2D Light-Based Puzzle Game"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "arcade",
    "numpy",
    "screeninfo"
]

[project.urls]
"Homepage" = "https://github.com/EltonLi2000/IllumiGator"
"Bug Tracker" = "https://github.com/EltonLi2000/IllumiGator/issues"

[tool.hatch.build.targets.wheel]
only-include = ["src/illumigator", "assets"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"assets" = "illumigator/assets"